- correcting the stylesheets of WebTable and StructurBrowser to have the same look and feel - adding JavaScript to WebTable to set position of the Header in caase of Scrollbars - correcting the construction of the checkbox in the StructurBrowser
git-svn-id: https://efaps.googlecode.com/svn/trunk@1592 fee104cc-1dfa-8c0f-632d-d3b7e6b59fb0

--- a/webapp/src/main/java/org/efaps/ui/wicket/components/table/TablePanel.css
+++ b/webapp/src/main/java/org/efaps/ui/wicket/components/table/TablePanel.css
@@ -21,6 +21,10 @@
   background-position: bottom;
 }
 
+.eFapsTableRowOdd:hover,.eFapsTableRowEven:hover {
+  background-color: #D0EDB8;
+}
+
 .eFapsTableHeaderCell,.eFapsTableCell {
   background-color: transparent;
   border-left: 1px solid #ddd;
@@ -37,10 +41,7 @@
 .eFapsTableHeaderCell {
   line-height: 1.6em;
   color: white;
-}
-
-.eFapsTableCell {
-  
+  font-weight: bold;
 }
 
 .eFapsTableCell img {
