--- a/webapp/src/main/java/org/efaps/ui/wicket/pages/content/table/TablePage.css
+++ b/webapp/src/main/java/org/efaps/ui/wicket/pages/content/table/TablePage.css
@@ -21,7 +21,7 @@
 #eFapsContentDiv {
   position: absolute;
   width: 100%;
-  top: 75px;
+  top: 68px;
   bottom: 0px;
   overflow: auto;
 }
